--- a/Past Interviews/pom.xml
+++ b/Past Interviews/pom.xml
@@ -10,13 +10,13 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>A</groupId>
-    <artifactId>Chapter2_LinkedLists</artifactId>
+    <groupId>AlgorthimicQuestions</groupId>
+    <artifactId>PastInterviews</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
-
+    
 </project>
