--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>Chapter8_RecursionAndDynamicProgramming</module>
         <module>Chapter10_SortingAndSearching</module>
         <module>Chapter16_Moderate</module>
+        <module>Past Interviews</module>
     </modules>
 
     <packaging>pom</packaging>
@@ -30,7 +31,28 @@
             <version>5.7.2</version>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.7.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-engine</artifactId>
+            <version>1.7.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-all</artifactId>
+            <version>1.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.12.0</version>
+        </dependency>
     </dependencies>
     
 </project>
