--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,19 @@ nbdist/
 /mvnw.cmd
 /bin/
 !/.idea/
+/.idea/compiler.xml
+/.idea/dataSources.local.xml
+/.idea/jarRepositories.xml
+/.idea/libraries/Maven__org_apache_commons_commons_lang3_3_12_0.xml
+/.idea/libraries/Maven__org_apiguardian_apiguardian_api_1_1_0.xml
+/.idea/libraries/Maven__org_hamcrest_hamcrest_all_1_3.xml
+/.idea/libraries/Maven__org_junit_jupiter_junit_jupiter_api_5_7_2.xml
+/.idea/libraries/Maven__org_junit_jupiter_junit_jupiter_engine_5_7_2.xml
+/.idea/libraries/Maven__org_junit_platform_junit_platform_commons_1_7_2.xml
+/.idea/libraries/Maven__org_junit_platform_junit_platform_engine_1_7_2.xml
+/.idea/libraries/Maven__org_opentest4j_opentest4j_1_2_0.xml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/uiDesigner.xml
+/.idea/vcs.xml
+/.idea/workspace.xml
