more code and tests

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>Chapter10_SortingAndSearching</module>
         <module>Chapter16_Moderate</module>
         <module>Past Interviews</module>
+        <module>Stacks</module>
     </modules>
 
     <packaging>pom</packaging>
